# liar-binary-classifier

./: .gitignore  README.md  evaluate.py  pyproject.toml
distilbert_model/: preprocessors.pkl
truthfulness_classifier/: __init__.py  explainer.py  model.py  predict.py  preprocess.py  train.py
