[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "truthfulness-classifier"
version = "0.1.0"
description = "Binary truthfulness classifier for statements made
by politicians and other public figures"
requires-python = ">=3.9"
dependencies = [
    # Deep learning framework — DistilBERT runs on this
    "torch>=2.0",
    # HuggingFace library for loading DistilBERT model + tokenizer
    "transformers>=4.35",
    # Explainability: LayerIntegratedGradients + GradientSHAP
    # Install with --no-deps to avoid numpy version conflicts with torch
    # pip install captum --no-deps
    "captum>=0.7",
    # Explainability fallback: LIME text explainer
    "lime>=0.2.0",
    # Claude API for natural language explanation generation
    "anthropic>=0.25",
    # Data handling
    "pandas>=2.0",
    "numpy>=1.24",
    # Stratified split + balanced accuracy metric
    "scikit-learn>=1.3",
    # Progress bars during training
    "tqdm>=4.65",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["truthfulness_classifier*"]
